--- a/main.css
+++ b/main.css
@@ -1,1 +1,59 @@
-body {background-color: #8FBC8F; font-family: "Microsoft YaHei", serif;}
+body {
+	background-color: #8FBC8F; 
+	font-family: "Microsoft YaHei", serif; 
+	margin: 0px; 
+	padding: 0px;
+}
+div {
+	background-color: rgba(255,255,255,0.8);
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.8);
+}
+#header {
+	width: 100%;
+	height: 50px;
+	/*border-radius: 0 0 10px 10px;*/
+	/*-----------------------*/
+	font-size: 38px;
+	text-align: center;
+	/*-----------------------*/
+}
+#bodyer {
+	width: 90%;
+	height: 800px;
+	margin-left:5%; 
+	margin-top: 10px;
+	border-radius: 10px;
+}
+#footer {
+	width: 90%;
+	height: 80px;
+	background-color: rgba(0,0,0,0.7);
+	margin-left:5%; 
+	margin-top: 10px;
+	border-radius: 10px 10px 0 0;
+	/*-----------------------*/
+	text-align: right;
+	padding-top: 50px;
+	font-size: 16px;
+	/*-----------------------*/
+}
+#title {
+	width: 16%;
+	height: 100%;
+	float: left;
+	border-radius: 10px 0 0 10px;
+	/*box-shadow: none,
+		none,
+		none,
+		0px 0px 5px black;*/
+		box-shadow: 1px 0px 3px 0px rgba(0,0,0,0.7);
+}
+#content {
+	width: 83.5%;
+	margin-left: 0.5%;
+	height: 100%;
+	float: left;
+	border-radius: 0 10px 10px 0;
+	box-shadow: none;
+	font-size: 20px;
+}
