--- a/main.css
+++ b/main.css
@@ -56,4 +56,13 @@ div {
 	border-radius: 0 10px 10px 0;
 	box-shadow: none;
 	font-size: 20px;
+	overflow: auto;	
+	/*text-align: center;*/
+}
+
+img {
+	width: 90%;
+	height: auto;
+	margin-left: 5%;
+
 }
